Footer text changes (extra char)

--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
                 <span class="font-serif text-2xl italic text-brand-white">Klariza Silva</span>
                 <p class="text-sm mt-2 opacity-70">Psicóloga • CRP 08/26102</p>
                 <p class="text-sm mt-6 opacity-60 leading-relaxed">
-                    Ajudando você a construir uma vida com mais sentido através da cura dos traumas e da sua criança interior..
+                    Ajudando você a construir uma vida com mais sentido através da cura dos traumas e da sua criança interior.
                 </p>
             </div>
             
