--- a/index.html
+++ b/index.html
@@ -336,7 +336,9 @@
                     </button>
                     <div class="faq-answer">
                         <p class="text-brand-brown/70 font-light text-base pb-6 leading-relaxed">
-                            As sessões são estruturadas para garantir sua segurança emocional enquanto reprocessamos as memórias. Não utilizamos hipnose; você permanece consciente e no controle durante todo o processo. O objetivo é reduzir a carga dolorosa das lembranças.
+                            As sessões são estruturadas para garantir sua segurança emocional enquanto reprocessamos as memórias. Inicialmente compreendo as suas queixas, nos aprofundamos na sua história de vida 
+                            e assim vamos identificando as memórias traumáticas a serem reprocessadas. Cuidamos em te deixar seguro com recursos de estabilização antes de iniciarmos a fase de reprocessamento, que 
+                            acontece através de estímulos bilaterais promovendo conexão entre áreas do cérebro que se encarrega de reduzir as perturbações da memória trabalhada. 
                         </p>
                     </div>
                 </div>
