Footer link fix

--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
             <div>
                 <h4 class="font-serif text-lg mb-6">Contato</h4>
                 <ul class="space-y-4 text-sm opacity-70 ">
-                    <a href="instagram.com/psiklarizasilva"><li class="flex items-center gap-2"><i data-lucide="instagram" class="w-4 h-4 text-brand-white"></i> @psiklarizasilva</li></a>
+                    <a href="https://www.instagram.com/psiklarizasilva" target="_blank"><li class="flex items-center gap-2"><i data-lucide="instagram" class="w-4 h-4 text-brand-white"></i> @psiklarizasilva</li></a>
                     <li class="flex items-center gap-2"><i data-lucide="mail" class="w-4 h-4 text-brand-white"></i> klarizapsi@gmail.com</li>
                     <li class="flex items-center gap-2"><i data-lucide="map-pin" class="w-4 h-4 text-brand-white"></i> Atendimento Online e Presencial</li>
                 </ul>
