Update description for therapy section to enhance clarity and comfort

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                         Acolha sua criança interior e ressignifique seus <span class="italic text-brand-terracotta">traumas</span>.
                     </h1>
                     <p class="text-lg text-brand-brown/70 leading-relaxed font-light max-w-lg mx-auto lg:mx-0">
-                        Um espaço seguro e sofisticado para adultos que buscam tratar feridas do passado através da terapia EMDR e reencontrar o equilíbrio emocional.
+                        Um espaço seguro e confortável para adultos que buscam tratar feridas do passado através da terapia EMDR e reencontrar o equilíbrio emocional.
                     </p>
                     <div class="pt-6 flex flex-col sm:flex-row gap-4 justify-center lg:justify-start">
                         <a href="https://wa.me/554499869940" target="_blank" class="bg-brand-terracotta text-white px-8 py-4 rounded-full text-lg font-serif italic hover:bg-brand-terracotta/90 transition shadow-xl flex items-center justify-center gap-3">
